--- a/src/html/about/index.html
+++ b/src/html/about/index.html
@@ -359,7 +359,7 @@
         <div class="grid gap-12 text-center md:grid-cols-3">
           <div class="space-y-4">
             <p class="mb-2 text-5xl font-bold">25-50</p>
-            <p class="text-lg text-orange-200">Daily Visitors</p>
+            <p class="text-lg text-orange-200">Daily Customers</p>
           </div>
           <div class="space-y-4">
             <p class="mb-2 text-5xl font-bold">5+</p>
