--- a/src/html/privacy/index.html
+++ b/src/html/privacy/index.html
@@ -252,9 +252,9 @@
             </h2>
             <div class="font-regular leading-relaxed text-gray-700">
               <p>
-                At Fitworx Gym, we are committed to protecting your privacy and ensuring the security of your personal
-                information. We handle 25-50 customers daily and maintain strict data protection standards for all our
-                members.
+                At Fitworx Gym, we are committed to protecting the customer's privacy and ensuring the security of the
+                customer's personal information. We handle 25 to 50 customers daily and maintain strict data protection
+                standards.
               </p>
             </div>
           </div>
@@ -271,7 +271,7 @@
                 <i
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
-                <span>Basic Personal Information: We collect essential personal details during gym registration.</span>
+                <span><b>Basic Personal Information:</b> We only collect essential personal details during gym registration.</span>
               </div>
               <!-- <div class="group flex items-start">
                 <i
@@ -287,7 +287,7 @@
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span>
-                  Student Verification: Student customers are required to provide information from a valid student ID.
+                  <b>Student Verification:</b> Customers who wants the benefit of student discount are required to provide a valid student ID.
                 </span>
               </div>
               <div class="group flex items-start">
@@ -295,7 +295,7 @@
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span>
-                  Facility Usage: We collect participants personal information for basketball court reservations or
+                  <b>Facility Usage:</b> We collect participants personal information for basketball court reservations or
                   zumba session bookings.
                 </span>
               </div>
@@ -314,13 +314,13 @@
                 <i
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
-                <span>To manage customer's gym daily or monthly pass and track expiration dates.</span>
+                <span>To manage customer's gym daily or monthly pass and track expiration or renewal dates.</span>
               </div>
               <div class="group flex items-start">
                 <i
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
-                <span>To handle facility reservations and prevent booking conflicts.</span>
+                <span>To handle facility reservations and prevent schedule conflicts.</span>
               </div>
               <div class="group flex items-start">
                 <i
@@ -328,12 +328,12 @@
                 ></i>
                 <span>To process payments and monitor accurate financial and statistic records.</span>
               </div>
-              <div class="group flex items-start">
+              <!-- <div class="group flex items-start">
                 <i
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span>To communicate with customers for facility rescheduling or inquiries concerns.</span>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -349,20 +349,20 @@
                 <i
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
-                <span>Information is shared only with the gym staff for operational purposes.</span>
+                <span>Sensitive information is only shared with the authorized gym staff for gym operational purposes.</span>
               </div>
               <div class="group flex items-start">
                 <i
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
-                <span>Freelance personal trainers receive only necessary information to provide their services.</span>
+                <span>Freelance personal trainers do not receive unnecessary customer information when providing their services.</span>
               </div>
               <div class="group flex items-start">
                 <i
                   class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
                 ></i>
                 <span>
-                  We DO NOT share your information for marketing purposes beyond our social media advertisements.
+                  We NEVER share customer information for marketing purposes beyond our social media advertisements.
                 </span>
               </div>
             </div>
