--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -348,7 +348,6 @@
           data-subtitle="Transaction Processing"
           data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Consolidate Transactions [-💳-]"
-          <!-- removed logs sub button -->
         ></div>
         <div
           id="section-stats"
@@ -377,15 +376,15 @@
       <section
         id="maintenance-accesscontrol-section"
         data-icons="fa-cogs::fa-server"
-        data-sectiontexts="Maintenance::Access Control"
+        data-sectiontexts="Maintenance::Admin Console"
         data-color="violet-fuchsia-red"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Access Control"
-          data-subtitle="System Access Management"
-          data-mainbtntext="Manage [-🔧-]"
+          data-title="Administration Console"
+          data-subtitle="User & System Management"
+          data-mainbtntext="Create System User [-🔧-]"
         ></div>
         <div id="section-stats"></div>
         <div
@@ -407,14 +406,14 @@
       <section
         id="maintenance-datacontrol-section"
         data-icons="fa-cogs::fa-file-circle-question"
-        data-sectiontexts="Maintenance::Data Control"
+        data-sectiontexts="Maintenance::Export Data"
         data-color="violet-fuchsia-red"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Data Control"
-          data-subtitle="System Data Management"
+          data-title="Export Data"
+          data-subtitle="System Data Exporter"
           data-mainbtntext="Export to PDF [-📄-]"
           data-subbtntext="Export to Excel [-💾-]"
         ></div>
