--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
             <!-- 🔑 CLIENT -->
             💪 Let's Go!
           </a>
-          <button
+          <!-- <button
             id="mobile-admin-login-btn"
             class="flex w-full items-center justify-center gap-2 rounded-xl bg-gradient-to-r from-orange-500 to-red-500 px-6 py-3 font-bold text-white shadow-lg"
           >
             🔒 Staff Only
-          </button>
+          </button> -->
         </div>
       </div>
     </nav>
