--- a/src/html/login/index.html
+++ b/src/html/login/index.html
@@ -207,6 +207,11 @@
                   <i class="fas fa-eye"></i>
                 </button>
               </div>
+              <div class="mt-1 flex justify-end">
+                <button type="button" id="forgotPasswordLink" class="text-sm text-orange-400 hover:text-orange-300">
+                  Forgot password?
+                </button>
+              </div>
 
               <div class="relative hidden" id="confirmPasswordField">
                 <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-6">
