fix: consolidated transaction date range

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -421,8 +421,8 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Monthly Users::Daily Check-ins::Supplements / Products::Reservations"
-          data-subtitles="Monthly Users::Daily Check-ins::Supplements / Products::Reservations"
+          data-tabtitles="Monthly Users::Check-ins Today::Supplements / Products::Reservations"
+          data-subtitles="Monthly registrants record::Logbook record::Products record::Reservations record"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No monthly members found::No regular/daily or student users found::No supplement sales found::No reservations found"
