--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -26,6 +26,9 @@
     <!-- tailwind (for easier css) -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- sweetalert2 (for dialogs) -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- toastify (for quick notifications) -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
 
