fix: nearly expiring change name tab

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -151,11 +151,11 @@
         <div
           id="section-content"
           data-sectioncount="2"
-          data-tabtitles="Active Monthly Customer Growth::Upcoming Monthly Customer Renewals"
+          data-tabtitles="Active Monthly Customer Growth::Nearly expiring monthly pass"
           data-subtitles="Monthly customer growth tracker::Customers due for monthly customer renewals"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="::<p class='text-sm'>No upcoming monthly customer renewals yet</p><p>Range: Two weeks notice</p>"
+          data-listemptytexts="::<p class='text-sm'>No nearly expiring monthly pass yet</p><p>Range: Two weeks notice</p>"
           data-listtitletexts="[]::[Customer ID//Customer//Expires After]"
           data-listdatasortby="[]::[name//name//date]"
           data-listitembtnids="[]::[renewBtn]"
