--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -137,6 +137,7 @@
           data-subtitle="Announcements"
           data-middletext="There's no news yet. Create one! [-👉-]"
           data-mainbtntext="Announce [-📢-]"
+          data-subbtntext="Check [-👁️-]"
           data-customcontent="1"
         ></div>
         <div
@@ -179,7 +180,6 @@
           data-subtitle="Customer Account Manager"
           data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Register New Customer [-💪-]"
-          <!-- removed logs sub button -->
         ></div>
         <div
           id="section-stats"
@@ -216,7 +216,6 @@
           data-title="Check-Ins"
           data-subtitle="Customer Attendance Tracker"
           data-middletext="<div id='liveDate'></div>"
-          <!-- removed logs sub button -->
         ></div>
         <div id="section-stats"></div>
         <div
@@ -248,7 +247,6 @@
           data-title="Reservations"
           data-subtitle="Realtime Calendar"
           data-middletext="<div id='liveDate'></div>"
-          <!-- removed Manual Reserve Facility main button -->
         ></div>
         <div
           id="section-stats"
@@ -318,7 +316,6 @@
           data-subtitle="Product Catalog"
           data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Add Product [-🧊-]"
-          <!-- removed logs sub button -->
         ></div>
         <div
           id="section-stats"
