fix: change color

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -198,8 +198,8 @@
           data-listtitletexts="[Customer ID//Customer//Customer Type//Price Rate//Date Registered]::[Customer ID//Customer//Start Date//End Date//Days Left//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Start Date//End Date//Amount Paid//Price Rate//Log Date & Time]::[Customer ID//Customer//Log Date & Time]"
           data-listdatasortby="[name//name//name//number//date]::[name//name//date//date//number//number//name//date]::[name//name//date//date//number//name//date]::[name//name//date]"
           data-listitembtnids="[customerProcessBtn//customerEditDetailsBtn]::[customerProcessBtn//customerEditDetailsBtn]::[customerDetailsBtn]::[customerDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Edit Details [-⚙️-]]::[Process [-📒-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow//orange]::[yellow//orange]::[gray]::[gray]"
+          data-listitembtntexts="[Process [-🎫-]//Edit Details [-⚙️-]]::[Process [-🎫-]//Edit Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[blue//orange]::[blue//orange]::[blue]::[blue]"
         ></div>
       </section>
 
@@ -335,7 +335,7 @@
           data-listdatasortby="[name//name//number//number//name//number//name//name//date//date]::[name//name//number//number//name//number//name//name//date//date]::[name//name//number//number//name//number//name//name//date//date]::[name//name//number//number//name//number//name//name//date//date]::[name//name//number//number//name//number//name//name//date//date]::[name//name//number//number//name//number//name//name//date//date]::[name//name//number//number//name//number//name//name//date//date]"
           data-listitembtnids="[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]"
           data-listitembtntexts="[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow]::[yellow]::[yellow]::[yellow]::[yellow]::[yellow]::[gray]"
+          data-listitembtncolors="[gray]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]"
         ></div>
       </section>
 
@@ -366,8 +366,8 @@
           data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]"
           data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//date]::[name//name//date]::[name//name//date]"
           data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow//red]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]"
+          data-listitembtntexts="[Process [-📄-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[green//red]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]"
         ></div>
       </section>
 
