--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -278,7 +278,7 @@
         id="ecommerce-cart-section"
         data-icons="fa-store::fa-cart-shopping"
         data-sectiontexts="Store::Cart"
-        data-color="yellow-orange-rose"
+        data-color="blue-sky-cyan"
         class="section"
       >
         <div
@@ -307,7 +307,7 @@
         id="ecommerce-stock-section"
         data-icons="fa-store::fa-warehouse"
         data-sectiontexts="Store::Stock"
-        data-color="yellow-orange-cyan"
+        data-color="blue-sky-cyan"
         class="section"
       >
         <div
@@ -366,7 +366,7 @@
           data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]"
           data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//date]::[name//name//date]::[name//name//date]"
           data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
-          data-listitembtntexts="[Process [-📄-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtntexts="[Process [-📗-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[green//red]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]"
         ></div>
       </section>
