--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -340,7 +340,7 @@
       </section>
 
       <!-- 🔥 payments 🔥 -->
-      <section id="payments-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
+      <section id="payments-section" data-icons="fa-coins" data-color="green-cyan-teal" class="section">
         <div
           id="section-header"
           data-title="Payments"
