add: date and time to all headers

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -384,6 +384,7 @@
           data-title="Administration Console"
           data-subtitle="User & System Management"
           data-mainbtntext="Create System User [-🔧-]"
+          data-middletext="<div id='liveDate'></div>"
         ></div>
         <div id="section-stats"></div>
         <div
@@ -412,6 +413,7 @@
         <div
           id="section-header"
           data-title="Export Data"
+          data-middletext="<div id='liveDate'></div>"
           data-subtitle="System Data Exporter"
           data-mainbtntext="Export to PDF [-📄-]"
           data-subbtntext="Export to Excel [-💾-]"
@@ -445,6 +447,7 @@
         <div
           id="section-header"
           data-title="Equipment Maintenance"
+          data-middletext="<div id='liveDate'></div>"
           data-subtitle="Manage Gym Equipment Maintenance"
           data-middletext="Monitor and log maintenance for all gym equipment"
           data-mainbtntext="Add Equipment  [-🛠️-]"
@@ -471,7 +474,7 @@
           id="section-header"
           data-title="Settings"
           data-subtitle="Manage your preferences"
-          data-middletext="Customize your dashboard"
+          data-middletext="<div id='liveDate'></div>"
           data-mainbtntext="Save Changes [-💾-]"
         ></div>
         <div id="section-stats"></div>
