--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -264,9 +264,9 @@
           data-listemptytexts="::No upcoming schedules yet::No past schedules yet"
           data-listtitletexts="[]::[Reservation ID//Customer//Reservation Type//Schedule//Log Date & Time]::[Reservation ID//Customer//Reservation Type//Schedule//Log Date & Time]"
           data-listdatasortby="[]::[name//name//name//date//date]::[name//name//name//date//date]"
-          data-listitembtnids="[]::[]::[]"
-          data-listitembtntexts="[]::[]::[]"
-          data-listitembtncolors="[]::[]::[]"
+          data-listitembtnids="[]::[reservationReschedBtn]::[]"
+          data-listitembtntexts="[]::[Reschedule [-📆-]]::[]"
+          data-listitembtncolors="[]::[blue]::[]"
           data-sectiontwotitletexts="Quick Reservation::Click a date in the live calendar tab"
           data-sectiontwoemptylist="No selected date yet"
           data-sectiontwobtntext="Process Reservation Date"
