--- a/src/html/terms/index.html
+++ b/src/html/terms/index.html
@@ -393,6 +393,34 @@
             class="rounded-xl bg-orange-50 p-6 shadow-md transition-transform duration-300 hover:-translate-y-2 hover:shadow-lg"
           >
             <h2 class="mb-4 flex items-center text-2xl font-semibold text-orange-800">
+              <i class="fas fa-calendar-check mr-3 text-orange-500"></i>
+              Reservation Terms
+            </h2>
+            <div class="space-y-4 text-gray-700">
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  Rescheduling is allowed, but splitting reserved hours across different days is not allowed.
+                </span>
+              </div>
+              <div class="group flex items-start">
+                <i
+                  class="fas fa-check-circle mr-3 mt-1.5 text-orange-500 transition-transform group-hover:scale-110"
+                ></i>
+                <span>
+                  Reservations must be for continuous, consecutive hours. Splitting a 2-hour booking into
+                  non-contiguous times (e.g., 1:00–2:00 PM and 6:00–7:00 PM) is not allowed.
+                </span>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="rounded-xl bg-orange-50 p-6 shadow-md transition-transform duration-300 hover:-translate-y-2 hover:shadow-lg"
+          >
+            <h2 class="mb-4 flex items-center text-2xl font-semibold text-orange-800">
               <i class="fas fa-credit-card mr-3 text-orange-500"></i>
               Payment Terms
             </h2>
