--- a/src/html/dashboard/index.html
+++ b/src/html/dashboard/index.html
@@ -144,12 +144,12 @@
             >
               🔔 Notifications
             </button>
-            <a
-              href=""
+            <button
+              id="logout"
               class="inline-flex items-center rounded-full bg-white px-3 py-2 text-xs font-medium text-orange-600 transition-all hover:bg-orange-50 focus:ring-2 focus:ring-orange-100"
             >
               🟥 Logout
-            </a>
+            </button>
           </div>
         </div>
 
@@ -213,12 +213,12 @@
             >
               Notifications
             </button>
-            <a
-              href=""
+            <button
+              id="logoutMobile"
               class="inline-flex items-center rounded-full bg-white px-3 py-2 text-sm font-medium text-orange-600 transition-all hover:bg-orange-50 focus:ring-2 focus:ring-orange-100"
             >
               Logout
-            </a>
+            </button>
           </div>
         </div>
       </div>
