fix: consolidated transaction maximum rows

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -360,7 +360,7 @@
           id="section-content"
           data-sectioncount="1"
           data-tabtitles="Pending::Canceled::Service::Service::Service::Sales::Sales::Sales"
-          data-subtitles="Transactions::Transactions::All::Cash::Cashless::All::Cash::Cashless"
+          data-subtitles="Transactions::Transactions::All::Cash::Cashless + Hybrid::All::Cash::Cashless + Hybrid"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No service transactions yet::No cash service transactions yet::No cashless service transactions yet::No sales transactions yet::No cash sales transactions yet::No cashless sales transactions yet"
           data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]"
