try fix online transaction

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -206,14 +206,14 @@
       <!-- 🔥 inquiry-checkins 🔥 -->
       <section
         id="inquiry-checkins-section"
-        data-icons="fa-users::fa-ticket-simple"
-        data-sectiontexts="Inquiry::Logbooks"
+        data-icons="fa-users::fa-book"
+        data-sectiontexts="Inquiry::Logbook"
         data-color="blue-indigo-orange"
         class="section"
       >
         <div
           id="section-header"
-          data-title="Check-Ins"
+          data-title="Check-Ins Logbook"
           data-subtitle="Customer Attendance Tracker"
           data-middletext="<div id='liveDate'></div>"
         ></div>
@@ -221,8 +221,8 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Daily Check-Ins Logbook::Monthly Check-Ins Logbook"
-          data-subtitles="All regular customer check-ins::All monthly customer check-ins"
+          data-tabtitles="Non Monthly Registrants Logbook::Monthly Registrants Logbook"
+          data-subtitles="All regular customer check-ins::All monthly pass check-ins"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="0"
           data-listemptytexts="No regular customer check-ins yet::No monthly customer check-ins yet"
