fix: new icons for admin side

--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -169,7 +169,7 @@
       <!-- 🔥 inquiry-customers 🔥 -->
       <section
         id="inquiry-customers-section"
-        data-icons="fa-users::fa-user-gear"
+        data-icons="fa-handshake-angle::fa-users"
         data-sectiontexts="Inquiry::Customers"
         data-color="blue-indigo-orange"
         class="section"
@@ -206,7 +206,7 @@
       <!-- 🔥 inquiry-checkins 🔥 -->
       <section
         id="inquiry-checkins-section"
-        data-icons="fa-users::fa-book"
+        data-icons="fa-handshake-angle::fa-book"
         data-sectiontexts="Inquiry::Logbook"
         data-color="blue-indigo-orange"
         class="section"
@@ -237,7 +237,7 @@
       <!-- 🔥 inquiry-reservations 🔥 -->
       <section
         id="inquiry-reservations-section"
-        data-icons="fa-users::fa-calendar-check"
+        data-icons="fa-handshake-angle::fa-calendar-check"
         data-sectiontexts="Inquiry::Reservations"
         data-color="blue-indigo-orange"
         class="section"
@@ -374,7 +374,7 @@
       <!-- 🔥 maintenance-accesscontrol 🔥 -->
       <section
         id="maintenance-accesscontrol-section"
-        data-icons="fa-cogs::fa-server"
+        data-icons="fa-broom::fa-server"
         data-sectiontexts="Maintenance::Admin Console"
         data-color="violet-fuchsia-red"
         class="section"
@@ -405,7 +405,7 @@
       <!-- 🔥 maintenance-datacontrol 🔥 -->
       <section
         id="maintenance-datacontrol-section"
-        data-icons="fa-cogs::fa-file-circle-question"
+        data-icons="fa-broom::fa-file-circle-question"
         data-sectiontexts="Maintenance::Export Data"
         data-color="violet-fuchsia-red"
         class="section"
@@ -439,7 +439,7 @@
       <!-- 🔥 maintenance-equipment 🔥 -->
       <section
         id="maintenance-equipment-section"
-        data-icons="fa-cogs::fa-dumbbell"
+        data-icons="fa-broom::fa-dumbbell"
         data-sectiontexts="Maintenance::Equipment"
         data-color="violet-fuchsia-red"
         class="section"
@@ -469,7 +469,7 @@
       </section>
 
       <!-- 🔥 settings 🔥 -->
-      <section id="settings-section" data-icons="fa-cog" data-color="slate-neutral-sky" class="section">
+      <section id="settings-section" data-icons="fa-cogs" data-color="slate-neutral-sky" class="section">
         <div
           id="section-header"
           data-title="Settings"
