--- a/src/html/admin/index.html
+++ b/src/html/admin/index.html
@@ -48,7 +48,7 @@
 
     <!-- animated background -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.clouds2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.dots.min.js"></script>
   </head>
   <body
     class="min-h-screen cursor-default overflow-y-auto overflow-x-hidden bg-gradient-to-br from-gray-900 via-gray-800 to-black"
@@ -61,9 +61,9 @@
     <!-- 🔥 dynamic sidebar 🔥 -->
     <aside class="flexbox fixed left-0 top-0 z-50 h-screen w-48 border-r border-gray-700 bg-gray-800 shadow-2xl">
       <!-- header -->
-      <header id="vanta-bg" class="relative flex-shrink-0 border-b border-gray-700 p-6">
+      <header id="vanta-bg" class="relative flex-shrink-0 border-b border-gray-700 p-6 text-white">
         <!-- 🔑 CLIENT -->
-        <div class="flex items-center justify-center text-xl font-bold text-orange-300 [text-shadow:-1px_-1px_0_black,1px_-1px_0_black,-1px_1px_0_black,1px_1px_0_black]">Fitworx Gym</div>
+        <div class="flex items-center justify-center text-xl font-bold text-black [text-shadow:-1px_-1px_0_white,1px_-1px_0_white,-1px_1px_0_white,1px_1px_0_white]">Fitworx Gym</div>
         <div class="mt-3 text-sm">
           <p class="emoji flex gap-2 font-bold">
             <script>
